[package]
name = "codemirror-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
wasm-bindgen = "0.2.93"

[dependencies.web-sys]
version = "0.3.70"
features = ["HtmlTextAreaElement"]
