[package]
name = "codemirror"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
derive_more = { version = "1.0.0", features = ["from"] }
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["HtmlTextAreaElement"] }

[dependencies.codemirror-sys]
version = "0.1.0"
path = "../codemirror-sys"
