[package]
name = "basic-example"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.22"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["Document", "Window"] }

[dependencies.codemirror]
path = "../.."
